force-app/main/default/objects/Lead/fields/Address2__c.field-meta.xml
<CustomField>
    <fullName>Address2__c</fullName>
    <description>Line 2 of an address</description>
    <label>Address 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>