force-app/main/default/objects/Lead/fields/Alt_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Alt_Business_Name__c</fullName>
    <description>DBA or Formerly Known As (FKA)</description>
    <inlineHelpText>DBA or Formerly Known As (FKA)</inlineHelpText>
    <label>Alt Business Name</label>
    <type>TextArea</type>
</CustomField>