force-app/main/default/objects/Lead/fields/Annual_asset_volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_asset_volume__c</fullName>
    <description>Enter the total annual volume of I.T. assets that this lead currently processes in all its facilities combined.</description>
    <inlineHelpText>Enter the total annual volume of I.T. assets that this lead currently processes in all its facilities combined.</inlineHelpText>
    <label>Annual asset volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>