force-app/main/default/objects/Lead/fields/App_Cost__c.field-meta.xml
<CustomField>
    <fullName>App_Cost__c</fullName>
    <description>Cost of app or in-app purchases</description>
    <label>App Cost</label>
    <length>25</length>
    <type>Text</type>
</CustomField>