force-app/main/default/objects/Lead/fields/Asset_Classes_for_RC__c.field-meta.xml
<CustomField>
    <fullName>Asset_Classes_for_RC__c</fullName>
    <description>What classes of assets do they return? (eg, Copiers, IT, etc)</description>
    <label>Asset Classes for RC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RC-Compressor Parts</fullName>
            </value>
            <value>
                <fullName>RC-Dunnage</fullName>
            </value>
            <value>
                <fullName>RC-IT-Computers &amp; Peripheral</fullName>
            </value>
            <value>
                <fullName>RC-IT-Networking/Telecom</fullName>
            </value>
            <value>
                <fullName>RC-Medical</fullName>
            </value>
            <value>
                <fullName>RC-Non-Medical Instruments</fullName>
            </value>
            <value>
                <fullName>RC-OE-Mailing Equipment</fullName>
            </value>
            <value>
                <fullName>RC-OE-Office &amp; Accounting</fullName>
            </value>
            <value>
                <fullName>RC-OE-Photocopy &amp; Related</fullName>
            </value>
            <value>
                <fullName>NonRC-IND-Fabricated Metal Products</fullName>
            </value>
            <value>
                <fullName>NonRC-IND-Forklifts/Mat’ls handling</fullName>
            </value>
            <value>
                <fullName>NonRC-IND-Metalworking Machinery</fullName>
            </value>
            <value>
                <fullName>NonRC-IND-Special Ind’l Machinery, NEC</fullName>
            </value>
            <value>
                <fullName>NonRC-Other-Agricultural Machinery</fullName>
            </value>
            <value>
                <fullName>NonRC-Other-Constr. Machinery</fullName>
            </value>
            <value>
                <fullName>NonRC-Other-Mining &amp; Oilfield Mach.</fullName>
            </value>
            <value>
                <fullName>NonRC-Software</fullName>
            </value>
            <value>
                <fullName>NonRC-TRANS-Aircraft</fullName>
            </value>
            <value>
                <fullName>NonRC-TRANS-Railroad Equipment</fullName>
            </value>
            <value>
                <fullName>NonRC-TRANS-Ships &amp; Boats</fullName>
            </value>
            <value>
                <fullName>NonRC-TRANS-Trucks, Trailers &amp; Buses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>