force-app/main/default/objects/Lead/fields/Business_Referral_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Business_Referral_Form_Signed__c</fullName>
    <description>Referral form signed on this date by the Referral company</description>
    <label>Business Referral Form Signed</label>
    <type>Date</type>
</CustomField>