force-app/main/default/objects/Lead/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <label>Children</label>
    <type>TextArea</type>
</CustomField>