force-app/main/default/objects/Lead/fields/Credit_App_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_App_Approved__c</fullName>
    <description>Date credit issued</description>
    <label>Credit App Approved</label>
    <type>Date</type>
</CustomField>