force-app/main/default/objects/Lead/fields/Downloads_or_Users__c.field-meta.xml
<CustomField>
    <fullName>Downloads_or_Users__c</fullName>
    <description>Number of app downloads, subscribers or users</description>
    <label>Downloads or Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>