force-app/main/default/objects/Lead/fields/Est_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Revenue__c</fullName>
    <description>Estimated Revenue imported from data sources</description>
    <inlineHelpText>Estimated Revenue imported from data sources</inlineHelpText>
    <label>Est. Revenue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>