force-app/main/default/objects/Lead/fields/Ext__c.field-meta.xml
<CustomField>
    <fullName>Ext__c</fullName>
    <description>Phone Ext.</description>
    <label>Ext.</label>
    <length>6</length>
    <type>Text</type>
</CustomField>