force-app/main/default/objects/Lead/fields/Lead_Source_Text__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Text__c</fullName>
    <label>Lead Source Text</label>
    <type>TextArea</type>
</CustomField>