force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GetAPrint</fullName>
            </value>
            <value>
                <fullName>Copier Dealer</fullName>
            </value>
            <value>
                <fullName>Logistics Provider</fullName>
            </value>
            <value>
                <fullName>Lessor</fullName>
            </value>
            <value>
                <fullName>Recycler/Remarketer</fullName>
            </value>
            <value>
                <fullName>OEM/Retailer/VAR</fullName>
            </value>
            <value>
                <fullName>Vendor/Supplier</fullName>
            </value>
            <value>
                <fullName>Common Shareholder</fullName>
            </value>
            <value>
                <fullName>Potential Investor</fullName>
            </value>
            <value>
                <fullName>industry Organization/Association</fullName>
            </value>
            <value>
                <fullName>ATM Installer/Deinstaller</fullName>
            </value>
            <value>
                <fullName>Sendium Customer</fullName>
            </value>
            <value>
                <fullName>Sendium Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>