force-app/main/default/objects/Lead/fields/Lease_Return_Policy__c.field-meta.xml
<CustomField>
    <fullName>Lease_Return_Policy__c</fullName>
    <description>Summary of how this lessor handles end of lease, renewal notifications, etc.</description>
    <label>Lease Return Policy</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>