force-app/main/default/objects/Lead/fields/MSA_Signed__c.field-meta.xml
<CustomField>
    <fullName>MSA_Signed__c</fullName>
    <description>Date MSA signed by both parties</description>
    <label>MSA Signed</label>
    <type>Date</type>
</CustomField>