force-app/main/default/objects/Lead/fields/NDA_Signed__c.field-meta.xml
<CustomField>
    <fullName>NDA_Signed__c</fullName>
    <description>Date when NDA was signed by both parties</description>
    <label>NDA Signed</label>
    <type>Date</type>
</CustomField>