force-app/main/default/objects/Lead/fields/OARF_Signed__c.field-meta.xml
<CustomField>
    <fullName>OARF_Signed__c</fullName>
    <description>OnePak Affiliate Referral Form signed</description>
    <label>OARF Signed</label>
    <type>Date</type>
</CustomField>