force-app/main/default/objects/Lead/fields/OMUA_Signed__c.field-meta.xml
<CustomField>
    <fullName>OMUA_Signed__c</fullName>
    <description>OnePak Mobile User Agreement signed</description>
    <inlineHelpText>OMUA includes providing PIN for OneScan app.</inlineHelpText>
    <label>OMUA Signed</label>
    <type>Date</type>
</CustomField>