force-app/main/default/objects/Lead/fields/Packet_Mailed__c.field-meta.xml
<CustomField>
    <fullName>Packet_Mailed__c</fullName>
    <description>When intro sales packet was sent.</description>
    <label>Packet Mailed</label>
    <type>Date</type>
</CustomField>