force-app/main/default/objects/Lead/fields/Percent_pack_ship_only__c.field-meta.xml
<CustomField>
    <fullName>Percent_pack_ship_only__c</fullName>
    <description>What portion of total asset volume are pack &amp; ship only (not scanned)?</description>
    <inlineHelpText>What portion of total asset volume are pack &amp; ship only (not scanned)?</inlineHelpText>
    <label>Percent pack &amp; ship only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>