force-app/main/default/objects/Lead/fields/Percent_scanned__c.field-meta.xml
<CustomField>
    <fullName>Percent_scanned__c</fullName>
    <description>What portion of the total volume requires onsite scanning?</description>
    <inlineHelpText>What portion of the total volume requires onsite scanning?</inlineHelpText>
    <label>Percent scanned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>