force-app/main/default/objects/Lead/fields/Prospective_Products__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Products__c</fullName>
    <description>These are the mostly likely products to be purchased by this lead.</description>
    <inlineHelpText>These are the mostly likely products to be purchased by this lead.</inlineHelpText>
    <label>Prospective Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled Returns</fullName>
            </value>
            <value>
                <fullName>ReturnCenter-Referral</fullName>
            </value>
            <value>
                <fullName>ReturnCenter-Connected</fullName>
            </value>
            <value>
                <fullName>ReturnCenter-Integrated</fullName>
            </value>
            <value>
                <fullName>Commodity Tracking/OEM Takeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>