force-app/main/default/objects/Lead/fields/Referred_to__c.field-meta.xml
<CustomField>
    <fullName>Referred_to__c</fullName>
    <description>Company to whom this account was referred for a referral fee.</description>
    <label>Referred to</label>
    <type>TextArea</type>
</CustomField>