force-app/main/default/objects/Lead/fields/Reports_to__c.field-meta.xml
<CustomField>
    <fullName>Reports_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This contact reports to...</description>
    <label>Reports to</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>