force-app/main/default/objects/Lead/fields/Return_Shipments_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Return_Shipments_per_Month__c</fullName>
    <description>How many shipments a month do they typically get?</description>
    <label>Return Shipments per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>