force-app/main/default/objects/Lead/fields/Sales_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Funnel_Stage__c</fullName>
    <label>Sales Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positioned</fullName>
                <default>true</default>
                <label>Positioned</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Promised</fullName>
            </value>
            <value>
                <fullName>Producing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>