force-app/main/default/objects/Lead/fields/Share_Functionality__c.field-meta.xml
<CustomField>
    <fullName>Share_Functionality__c</fullName>
    <description>Options for sharing that GetAPrint might fit into</description>
    <label>Share Functionality</label>
    <type>TextArea</type>
</CustomField>