force-app/main/default/objects/Lead/fields/Sign_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Sign_in_Process__c</fullName>
    <description>Requirements in app to use or make purchases</description>
    <label>Sign-in Process &amp; Permissions</label>
    <type>TextArea</type>
</CustomField>