force-app/main/default/objects/Lead/fields/Stock_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Stock_Exchange__c</fullName>
    <description>Which stock exchange their stock is traded on</description>
    <inlineHelpText>Which stock exchange their stock is traded on</inlineHelpText>
    <label>Stock Exchange</label>
    <length>12</length>
    <type>Text</type>
</CustomField>