force-app/main/default/objects/Lead/fields/Ticker__c.field-meta.xml
<CustomField>
    <fullName>Ticker__c</fullName>
    <description>Stock&#39;s Ticker Symbol</description>
    <inlineHelpText>Stock&#39;s Ticker Symbol</inlineHelpText>
    <label>Ticker</label>
    <length>5</length>
    <type>Text</type>
</CustomField>