force-app/main/default/objects/Lead/fields/Trade_Associations__c.field-meta.xml
<CustomField>
    <fullName>Trade_Associations__c</fullName>
    <description>These are trade groups this company is a member of.</description>
    <inlineHelpText>These are trade groups this company is a member of.</inlineHelpText>
    <label>Trade Associations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RLA</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>Brewers Association</fullName>
            </value>
            <value>
                <fullName>ELFA</fullName>
            </value>
            <value>
                <fullName>NEFA</fullName>
            </value>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>IBPI</fullName>
            </value>
            <value>
                <fullName>Pro Dealers Group</fullName>
            </value>
            <value>
                <fullName>Select Dealers Group</fullName>
            </value>
            <value>
                <fullName>American Co-op (Sharp)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>