force-app/main/default/objects/Lead/listViews/ATM_Installers_Deinstallers.listView-meta.xml
<ListView>
    <fullName>ATM_Installers_Deinstallers</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.URL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>ATM Installer/Deinstaller</value>
    </filters>
    <label>ATM Installers/Deinstallers</label>
</ListView>