force-app/main/default/objects/Lead/listViews/ATMs.listView-meta.xml
<ListView>
    <fullName>ATMs</fullName>
    <columns>LEAD.STATUS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.URL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>ATMs</value>
    </filters>
    <label>ATMs</label>
</ListView>