force-app/main/default/objects/Lead/listViews/Certifiedprospects.listView-meta.xml
<ListView>
    <fullName>Certifiedprospects</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prospective_Products__c</field>
        <operation>includes</operation>
        <value>Certified Service</value>
    </filters>
    <label>Certified prospects</label>
</ListView>