force-app/main/default/objects/Lead/listViews/Compressor_Parts.listView-meta.xml
<ListView>
    <fullName>Compressor_Parts</fullName>
    <columns>LEAD.INDUSTRY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Compressor Parts</value>
    </filters>
    <label>Compressor Parts</label>
</ListView>