force-app/main/default/objects/Lead/listViews/Copier_Dealers.listView-meta.xml
<ListView>
    <fullName>Copier_Dealers</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.URL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Office Equipment/Copier Dealer</value>
    </filters>
    <label>Copier Dealers</label>
</ListView>