force-app/main/default/objects/Lead/listViews/Dealers_SE.listView-meta.xml
<ListView>
    <fullName>Dealers_SE</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 or 5 or 6 or 7 or 8 or 9 or 10)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.INDUSTRY</field>
        <operation>equals</operation>
        <value>Office Equipment/Copier Dealer</value>
    </filters>
    <filters>
        <field>LEAD.EMAIL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>NC</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>SC</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>FL</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>GA</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>VA</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>AL</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>MS</value>
    </filters>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>TN</value>
    </filters>
    <label>Dealers: SE</label>
</ListView>