force-app/main/default/objects/Lead/listViews/Dunnage.listView-meta.xml
<ListView>
    <fullName>Dunnage</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes_for_RC__c</field>
        <operation>equals</operation>
        <value>RC-Dunnage</value>
    </filters>
    <label>Dunnage</label>
</ListView>