force-app/main/default/objects/Lead/listViews/Forklifts.listView-meta.xml
<ListView>
    <fullName>Forklifts</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Asset_Classes_for_RC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Classes_for_RC__c</field>
        <operation>includes</operation>
        <value>NonRC-IND-Forklifts/Mat’ls handling</value>
    </filters>
    <label>Forklifts</label>
</ListView>