force-app/main/default/objects/Lead/listViews/Getaprint.listView-meta.xml
<ListView>
    <fullName>Getaprint</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATE</columns>
    <columns>Specialization__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>GetAPrint</value>
    </filters>
    <label>Getaprint</label>
</ListView>